fix projects iframe overlapping on mobile

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -63,9 +63,3 @@ iframe {
 .c-secondary {
 	background-color: $color-secondary;
 }
-
-.overflow-container {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-}
