--- a/_sass/sections/_projects.scss
+++ b/_sass/sections/_projects.scss
@@ -4,7 +4,6 @@
 
 .projects .content {
     max-width: 700px;
-    aspect-ratio: 16 / 9;
 }
 
 .projects iframe {
